fixed squished skills list on large phone screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ img.profilePic {
 }
 
 article {
-	width:60%;
+	width: 80%;
 }
 .tech-list {
 	width: 33%;
